PDF reviewed